# data-structures

./: LICENSE
fibb/: CMakeLists.txt  plot.py
fibb/fibb/: CMakeLists.txt  fibb.cpp  fibb.h  main.cpp  node_list.cpp  node_list.h  tree.h  vector.h
fibb/generator/: CMakeLists.txt  fibgen.c
fibb/text/: text.tex
range/: CMakeLists.txt
range/generator/: CMakeLists.txt  range_tree_gen.c
range/range/: CMakeLists.txt  bba_tree.cpp  bba_tree.h  main.cpp  node.cpp  node.h  range_tree.cpp  range_tree.h  vector.h
splay/: .gitignore  do123.sh  do4.sh  do5.sh  do67.sh  do_all.sh  generate.sh  install.sh  plot.py  text.tex  updatepdf.sh
splay/generator/: splaygen.c
splay/loption/: res_n_T10  res_n_T100  res_n_T1000  res_n_T10000  res_n_T100000  res_n_T1000000  res_o_uniform  res_s_T10  res_s_T100  res_s_T1000  res_s_T10000  res_s_T100000  res_s_T1000000  res_s_uniform
splay/results/: res_n_T10  res_n_T100  res_n_T1000  res_n_T10000  res_n_T100000  res_n_T1000000  res_n_seq  res_o_nonuniform  res_o_seq  res_o_uniform  res_s_T10  res_s_T100  res_s_T1000  res_s_T10000  res_s_T100000  res_s_T1000000  res_s_nonuniform  res_s_seq
splay/splay/: CMakeLists.txt  common.h  main.cpp  naive_tree.h  opt.h  splay_tree.h  tree.cpp  vector.h
transp/: CMakeLists.txt  CMakeSettings.json  plot_sim.py  plot_time.py  text.tex
transp/simulator/: CMakeLists.txt  simulator.cpp
transp/text/: text.tex
transp/transp/: CMakeLists.txt  main.cpp  matrix.h  matrix_sizes.h  test.cpp  vector.h
